# TestCoverageMaster

./: .coverage  .replit  README.md  ci_cd.sh  code_analyzer.py  main.py  oauth_config.py  package-lock.json  package.json  pyproject.toml  requirements.txt  test_analyzer.py  test_generator.py  test_main.py  utils.py  visualization.py
.github/workflows/: ci_cd.yml
task-manager/src/app/: app-routing.module.ts  task.service.spec.ts  task.service.ts  task.ts
task-manager/src/app/task-create/: task-create.component.html  task-create.component.ts
task-manager/src/app/task-edit/: task-edit.component.html  task-edit.component.ts
task-manager/src/app/task-list/: task-list.component.html  task-list.component.ts
